@@ -2,7 +2,8 @@
 package edu.colorado.phet.balancingchemicalequations;
 
 import edu.colorado.phet.common.phetcommon.model.clock.IClock;
-import edu.colorado.phet.common.piccolophet.PiccoloModule;
+import edu.colorado.phet.common.phetcommon.simsharing.messages.IUserComponent;
+import edu.colorado.phet.common.piccolophet.SimSharingPiccoloModule;
 
 
 /**
@@ -10,10 +11,10 @@ import edu.colorado.phet.common.piccolophet.PiccoloModule;
  *
  * @author Chris Malley (cmalley@pixelzoom.com)
  */
-public abstract class BCEModule extends PiccoloModule {
+public abstract class BCEModule extends SimSharingPiccoloModule {
 
-    public BCEModule( String title, IClock clock, boolean startsPaused ) {
-        super( title, clock, startsPaused );
+    public BCEModule( IUserComponent userComponent, String title, IClock clock, boolean startsPaused ) {
+        super( userComponent, title, clock, startsPaused );
         setLogoPanel( null ); // workaround for #2015
         setControlPanel( null );
         setClockControlPanel( null );
